2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide/Services.cs,
	  MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/SolutionNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassBrowser/ProjectNamespaceBuilder.cs,
	  MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs,
	  MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/MethodNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/EventNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ClassData.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/FieldNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/PropertyNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ClassNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/MemberNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceData.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ClassPad/MemberNodeCommandHandler.cs,
	  MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs,
	  MonoDevelop.Ide.Gui/RootWorkspace.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs,
	  MonoDevelop.Ide.Gui/DefaultWorkbench.cs,
	  MonoDevelop.Ide.Gui/Ide.cs, MonoDevelop.Ide.Gui/HelpViewer.cs,
	  MonoDevelop.Ide.Tasks/TaskService.cs: Translated old code to new
	  dom.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs,
	  MonoDevelop.Ide.Gui.Dialogs/OverridesImplementsDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs,
	  MonoDevelop.Ide.Gui/RootWorkspace.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Changes for converted
	  refactoring infrastructure.

2008-07-28  Andrés G. Aragoneses <aaragoneses@novell.com> 